Draft de backend funcionando, servlet para subida de imagenes y auth
